<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myprimerycolor"
    tools:context=".ForgetPass">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/myprimerycolor"
                android:textSize="25dp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp">

                <EditText
                    android:backgroundTint="@color/myprimerycolor"
                    android:id="@+id/forgetemail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="15dp"
                    android:background="@color/white"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/white"
                    android:hint="@string/Email" />

            </androidx.cardview.widget.CardView>
<!--            <EditText-->
<!--                android:id="@+id/forgetemail"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_marginStart="10dp"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:layout_marginEnd="10dp"-->
<!--                android:hint="Email" />-->

            <Button
                android:id="@+id/submitforgetpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/Submit" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_to"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/backtologin"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/myprimerycolor"
                    android:textSize="15dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>