<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:fitsSystemWindows="true"
    tools:context=".Loginpageactivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/trinitylogo"
        app:layout_constraintBottom_toTopOf="@+id/main_cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_cardview"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="130dp"
        app:cardCornerRadius="15dp"
        android:outlineSpotShadowColor="@color/black"
        android:outlineAmbientShadowColor="@color/black"
        android:elevation="20dp"
        app:cardElevation="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/login"
                android:textSize="30dp"
                android:gravity="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/username_cardview"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardCornerRadius="10dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="30dp"
                android:elevation="0dp"
                app:cardElevation="0dp"
                android:backgroundTint="#38b6ff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_person_24" />

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:inputType="text"
                        android:lines="1"
                        android:id="@+id/username"
                        android:hint="@string/Username"
                        android:textColorHint="@color/grey"
                        android:textColor="@color/white"
                        android:backgroundTint="@android:color/transparent"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:elevation="0dp"
                android:backgroundTint="#38b6ff"
                app:cardElevation="0dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_cardview">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_lock_24" />

                    <EditText
                        android:id="@+id/pass"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/forgot_password"
                android:textColor="#38b6ff"
                android:textSize="16dp"
                android:id="@+id/forgetpass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.767"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />


            <Button
                android:id="@+id/loginbutton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:backgroundTint="#38b6ff"
                android:elevation="0dp"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                app:layout_constraintVertical_bias="0.233" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/or_sign_up_using"
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <!--                <ImageButton-->
                <!--                    android:id="@+id/otpimg"-->
                <!--                    android:layout_width="40dp"-->
                <!--                    android:layout_height="40dp"-->
                <!--                    android:background="@drawable/password"/>-->

                <ImageButton
                    android:id="@+id/fimg"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/fb_logo" />

                <ImageButton
                    android:id="@+id/timg"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/twitter_logo2" />

                <ImageButton
                    android:id="@+id/gimg"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/google_logo" />

                <ImageButton
                    android:id="@+id/limg"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/linkedin" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/change_language"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/Change"
        android:textColor="#38b6ff"
        android:gravity="center"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="52dp"
        android:gravity="right"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_cardview" />

    <TextView
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="80dp"
        android:text="@string/Signup"
        android:gravity="center"
        android:textColor="#38b6ff"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/main_cardview" />

</androidx.constraintlayout.widget.ConstraintLayout>