<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6A00F4"
    android:fitsSystemWindows="true"
    tools:context=".Loginpageactivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_cardview"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="80dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:elevation="15dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/Signup"
                android:textSize="30dp"
                android:gravity="center"
                android:textColor="#6A00F4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/username_cardview"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardCornerRadius="10dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="50dp"
                android:elevation="0dp"
                app:cardElevation="0dp"
                android:backgroundTint="#6A00F4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_person_24" />

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:inputType="text"
                        android:lines="1"
                        android:id="@+id/uname"
                        android:hint="@string/name"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:backgroundTint="@android:color/transparent"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/username_cardview2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardCornerRadius="10dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="20dp"
                android:elevation="0dp"
                app:cardElevation="0dp"
                android:backgroundTint="#6A00F4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_cardview">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_email_24" />

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:inputType="text"
                        android:hint="@string/Email"
                        android:textColorHint="@color/white"
                        android:lines="1"
                        android:id="@+id/email"
                        android:textColor="@color/white"
                        android:backgroundTint="@android:color/transparent"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/password_cardView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="#6A00F4"
                app:cardCornerRadius="10dp"
                android:elevation="0dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_cardview2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_lock_24" />

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:id="@+id/pass"
                        android:hint="@string/Password"
                        android:textColorHint="@color/white"
                        android:backgroundTint="@android:color/transparent"
                        android:textColor="@color/white" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/password_cardView2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="#6A00F4"
                app:cardCornerRadius="10dp"
                android:elevation="0dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_lock_24" />

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:id="@+id/conpass"
                        android:hint="@string/confirm_password"
                        android:textColorHint="@color/white"
                        android:backgroundTint="@android:color/transparent"
                        android:textColor="@color/white" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="100dp"
                android:backgroundTint="#6A00F4"
                android:text="@string/Signup"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_cardView2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/back_to"
                android:textColor="#6A00F4"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:layout_constraintVertical_bias="0.503" />

            <TextView
                android:id="@+id/loginback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#406A00F4"
                android:textSize="16dp"
                android:layout_marginStart="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:layout_constraintVertical_bias="0.503" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>